This fixes a problem building large (> 2Gb) binaries on 32-bit hosts.  Using a long type instead of long long meant that bfd_seek (SET) could be called with a negative offset.

PR ld/16803
	* elf.c (_bfd_elf_set_section_contents): Use correct type to hold
	file position.